# YOLOX-train-your-data

./: README.md  generate_data.py  train.py
demo/TensorRT/cpp/: CMakeLists.txt  yolox.cpp
tools/: demo.py  export_onnx.py
yolox/core/: trainer.py
yolox/data/: dataloading.py
yolox/data/datasets/: __init__.py  coco.py  mosaicdetection.py  my_classes.py  voc.py
yolox/evaluators/: coco_evaluator.py  voc_eval.py
yolox/exp/: yolox_base.py
yolox/models/: yolo_head.py
yolox/utils/: boxes.py
